--- a/templates/weather.html.twig
+++ b/templates/weather.html.twig
@@ -1,6 +1,7 @@
 {% do assets.addInlineJs("ifPageWeather=true;") %}
 {% extends 'partials/base.html.twig' %}
 {% block content %}
+<article>
 	<h1>{{ page.title }}</h1>
 	<div id="ds-fptoday">
 		<time id="ds-fptime" datetime="{{ 'now'|date('Y-m-d') }}">Dnes je </time>
@@ -35,4 +36,5 @@
 	<footer id="ds-fpfooter">
 		<a id="ds-fpforecastinfo" href="">{{ "DATAFROM"|t }} Forecast.io</a>, <a href="http://vclouds.deviantart.com/gallery/#/d2ynulp">VClouds Weather Icons©</a>
 	</footer>
+</article>
 {% endblock %}
