--- a/templates/partials/weather-widget.html.twig
+++ b/templates/partials/weather-widget.html.twig
@@ -2,7 +2,7 @@
 <h1 class="basetheme radius">{{ (caption) ? caption : "WIDGET_CONFIG.CAPTIONDEF"|t }}</h1>
 <div id="ds-box" class="widgetbox hidden shadow">
 	<div id="ds-today">
-		<time id="ds-time" class="center" datetime="{{ 'now'|date('Y-m-d') }}">Dnes je </time>
+		<time id="ds-time" class="center" datetime="{{ 'now'|date('Y-m-d') }}">{{ "TODAY_IS"|t }} </time>
 		<p id="ds-summary" class="bold center"></p>
 		<img id="ds-icon" data-src="{{ url('plugin://darkskyweather/assets/vclouds') }}/" src="" alt="">
 		<div id="ds-weatherinfo" class="right">
